# motd

./: Cargo.toml  README.md  build.py
.github/workflows/: build.yml
src/: cli.rs  main.rs
