[package]
name = "motd"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
colored = "2.1.0"
gamedig = "0"
image = "0.24.9"
regex = "1.10.6"
serde = "1.0.208"
serde_json = "1.0.125"
unicode-width = "0.1.13"
viuer = "0.7.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
